# ruuvi-mcp-server

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
cli/: __init__.py  app.py  ui.py
cli/commands/: ble.py  cloud.py  config.py  devices.py  gateway.py  mqtt.py  status.py  storage.py
data/: devices.example.yaml
ruuvi_data/: __init__.py  ble.py  cloud.py  config.py  decoder.py  devices.py  gateway.py  models.py  mqtt.py  storage.py
ruuvi_mcp/: __init__.py  server.py
tests/: test_ble.py  test_cli.py  test_decoder.py  test_devices.py  test_mcp_server.py  test_models.py  test_storage.py
